修改了一下javabean的属性，你们明天下载一下

--- a/WebContent/commodity/lists.html
+++ b/WebContent/commodity/lists.html
@@ -46,7 +46,7 @@
 				<p> <a href="/dr_series/12_22.html">Forever系列</a></p>
 				<p> <a href="/dr_series/11_20.html">My Heart系列</a></p>
 				<p> <a href="/dr_series/16_30.html">True Love系列</a></p>
-				<p> <a href="/dr_series/15_28.html">I Swear系列</a></p>
+				<p> <a href="/dr_series/15_28.html">DR PARIS系列</a></p>
 				<p> <a href="/dr_series/13_24.html">Just you系列</a></p>
 			</div>
 			<div class="navdiv-left">
