--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,6 +7,8 @@
 		<link href="css/same_A.css?v=1.3.7.2" type="text/css" rel="stylesheet" />
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script src="js/index.js?virsion=1.3.7.2" type="text/javascript"></script>
+		<script type="text/javascript" src="js/vue.js"></script>
+  <script type="text/javascript" src="js/axios.js"></script>
 	</head>
 
 	<body>
@@ -289,141 +291,55 @@
 						<span id="rxph"><i>热销商品</i><em></em> </span>
 					</div>
 					<!--购买的款式-->
-					<div class="cmain">
+					<div class="cmain" id="app">
 						<ul id="ullist" class="buyit">
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="Forever系列 " src="images/2014090119350717386d7a1e.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/201409011935072849fe802f.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a  href="commodity/detail.html">Forever系列 经典款&nbsp;50分&nbsp;H色</a></p>
-									<p> <span>￥25,700</span><i>销量：5698</i></p>
-								</div>
-							</li>
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="Forever系列 经典款&nbsp;40分&nbsp;D色" src="images/201409011932585de1c2f2a9.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/20140901193258beafcb5eb7.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a  href="commodity/detail.html">Forever系列 经典款&nbsp;40分&nbsp;D色</a></p>
-									<p> <span>￥15,800</span><i>销量：2413</i></p>
-								</div>
-							</li>
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="True Love系列 简奢款&nbsp;30分&nbsp;E色" src="images/2014091515351160b3d26880.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/20140901162336bad2605031.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a  href="commodity/detail.html">True Love系列 简奢款&nbsp;30分&nbsp;E色</a></p>
-									<p> <span>￥11,000</span><i>销量：1235</i></p>
-								</div>
-							</li>
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="True Love系列 典雅&nbsp;40分&nbsp;F色" src="images/201412081512070b82d519cb.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/20141208151207e3fa9cdc9e.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a  href="commodity/detail.html">True Love系列 典雅&nbsp;40分&nbsp;F色</a></p>
-									<p> <span>￥19,150</span><i>销量：2654</i></p>
-								</div>
-							</li>
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="True Love系列 典雅&nbsp;40分&nbsp;F色" src="images/201412081512070b82d519cb.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/20141208151207e3fa9cdc9e.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a  href="commodity/detail.html">True Love系列 典雅&nbsp;40分&nbsp;F色</a></p>
-									<p> <span>￥19,150</span><i>销量：2654</i></p>
-								</div>
-							</li>
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="True Love系列 典雅&nbsp;40分&nbsp;F色" src="images/201412081512070b82d519cb.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/20141208151207e3fa9cdc9e.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a  href="commodity/detail.html">True Love系列 典雅&nbsp;40分&nbsp;F色</a></p>
-									<p> <span>￥19,150</span><i>销量：2654</i></p>
-								</div>
-							</li>
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="True Love系列 典雅&nbsp;40分&nbsp;F色" src="images/201412081512070b82d519cb.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/20141208151207e3fa9cdc9e.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a  href="commodity/detail.html">True Love系列 典雅&nbsp;40分&nbsp;F色</a></p>
-									<p> <span>￥19,150</span><i>销量：2654</i></p>
-								</div>
-							</li>
-							<li>
-								<div class="by_top">
-									<a  href="commodity/detail.html" rel="nofollow"></a>
-									<div style="opacity:1" class="bything-one">
-										<img width="236px" height="236px" alt="True Love系列 典雅&nbsp;40分&nbsp;F色" src="images/201412081512070b82d519cb.jpg" />
-									</div>
-									<div style="opacity:0" class="bything-two">
-										<img width="236px" height="236px" src="images/20141208151207e3fa9cdc9e.jpg" />
-									</div>
-								</div>
-								<div class="by_center"></div>
-								<div class="by_bottom">
-									<p><a href="commodity/detail.html">True Love系列 典雅&nbsp;40分&nbsp;F色</a></p>
-									<p> <span>￥19,150</span><i>销量：2654</i></p>
-								</div>
-							</li>
+							<li v-for="items in list" style="margin-bottom: 5px"> 
+						        <div class="by_top" @mouseover="change($event)" @mouseleave="fuck($event)"> 
+						         <a href="commodity/detail.html"></a> 
+						         <div class="bything-one" > 
+						          <img width="236px" height="236" :src="[items.images]" /> 
+						         </div> 
+						        </div> 
+						        <div class="by_center"> 
+						        </div> 
+						        <div class="by_bottom" > 
+						         <p> <a style="font-size: 15px">DR钻戒 {{items.goodsname}}&nbsp;{{items.type}}&nbsp;{{items.color}}</a></p> 
+						         <p> <span style="font-size: 18px;color:#680000">￥{{items.price}}</span></p> 
+						        </div> 
+						    </li>
 						</ul>
 					</div>
 					<!--款式end-->
 				</div>
-
+				<script type="text/javascript">
+				     var app = new Vue({
+				    	el:'#app',
+				    	data:{
+				    		list:[]
+				    	},
+				    	methods:{
+				    		change:function(event){
+				    			 var img = event.currentTarget.firstElementChild.nextElementSibling.firstElementChild;
+				    			 var firstpath = img.src;
+				    			 var li = event.currentTarget.parentElement;
+				    			 var secondpath = firstpath.replace('(1)','(2)');
+				    			 img.src=secondpath;
+				    		 },
+				    		 fuck:function(event){
+				    			 var img = event.currentTarget.firstElementChild.nextElementSibling.firstElementChild;
+				    			 var firstpath = img.src;
+				    			 var secondpath = firstpath.replace('(2)','(1)');
+				    			 img.src=secondpath;
+				    		 }
+				    	},
+				    	created:function(){
+				    		//var that = this;
+			    			axios.get('filtrate').then((ret)=>{
+			    				this.list=ret.data;
+			    			});
+				    	}
+				     });
+				</script>
 				<!--底部-->
 				<div class="footer">
 					<!--错误-->
